Plaintext syntax highlighting
Word movement without a syntax language matches vim's configuration
without the iskeyword option, based solely on whitespace.
This feels strange compared to vim's default configuration, which
sets iskeyword such that word movement stops on punctuation.

To mimic vim's default configuration, add a new syntax language
for plaintext documents that tokenizes words and punctuation
based on unicode character classes.

Resolves https://github.com/aretext/aretext/issues/47

--- a/app/default-config.json
+++ b/app/default-config.json
@@ -7,7 +7,7 @@
       "hideDirectories": [
         ".git"
       ],
-      "syntaxLanguage": "undefined",
+      "syntaxLanguage": "plaintext",
       "tabExpand": false,
       "tabSize": 4,
       "showLineNumbers": false
