Add YAML syntax highlighting
Add support for YAML syntax highlighting.  This mostly re-uses
the JSON rules because YAML is a superset of JSON.

For now, we're not highlighting pointers (& and *), string
operators (>- etc) and probably other things that are part
of YAML.  We can add those rules later.

Resolves https://github.com/aretext/aretext/issues/18

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -27,6 +27,19 @@
     tabSize: 2
     showLineNumbers: true
 
+- name: yaml
+  pattern: "**/*.yaml"
+  config: &yamlConfig
+    autoIndent: true
+    syntaxLanguage: yaml
+    tabExpand: true
+    tabSize: 2
+    showLineNumbers: true
+
+- name: yml
+  pattern: "**/*.yml"
+  config: *yamlConfig
+
 - name: go
   pattern: "**/*.go"
   config:
