Install markdownfmt in CI instead of relying on go.mod
Fix broken build due to markdownfmt not being installed in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install goimports
       run: go get golang.org/x/tools/cmd/goimports
 
+    - name: Install markdownfmt
+      run: go get github.com/shurcooL/markdownfmt
+
     - name: Build and run tests
       run: make
 
