--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
         go-version: 1.16
 
     - name: Install goimports
-      run: go get golang.org/x/tools/cmd/goimports
+      run: go install golang.org/x/tools/cmd/goimports@master
 
     - name: Install markdownfmt
-      run: go get github.com/shurcooL/markdownfmt
+      run: go install github.com/shurcooL/markdownfmt@master
 
     - name: Build and run tests
       run: make
