Update goreleaser packaging rules
Wrap tarball files in a directory.
Replace the README with docs.
Sign checksums.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,6 +14,10 @@ builds:
       - darwin
 
 archives:
-  - files:
-      - README.md
+  - wrap_in_directory: true
+    files:
       - LICENSE
+      - docs/*
+
+signs:
+  - artifacts: checksum
