Implement show tabs
Add config and menu command to show or hide tabs in the document.

Resolves https://github.com/aretext/aretext/issues/12

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -12,6 +12,7 @@
     syntaxLanguage: plaintext
     tabExpand: false
     tabSize: 4
+    showTabs: false
     showLineNumbers: false
 #   menuCommands:
 #     - name: my custom menu command
