Implement show trailing spaces
Resolves https://github.com/aretext/aretext/issues/13

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -13,6 +13,7 @@
     tabExpand: false
     tabSize: 4
     showTabs: false
+    showTrailingSpaces: false
     showLineNumbers: false
 #   menuCommands:
 #     - name: my custom menu command
