--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -8,7 +8,7 @@
   pattern: "**"
   config:
     autoIndent: false
-    hideDirectories: [".git"]
+    hideDirectories: ["**/.git"]
     syntaxLanguage: plaintext
     tabExpand: false
     tabSize: 4
