Make syntax highlighting colors configurable
Resolves: https://github.com/aretext/aretext/issues/59

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -14,6 +14,13 @@
     tabSize: 4
     showTabs: false
     showLineNumbers: false
+    styles:
+      lineNum: {color: "olive"}
+      tokenOperator: {color: "purple"}
+      tokenKeyword: {color: "olive"}
+      tokenNumber: {color: "green"}
+      tokenString: {color: "maroon"}
+      tokenComment: {color: "navy"}
 #   menuCommands:
 #     - name: my custom menu command
 #       shellCmd: echo 'hello world!' | less
