Add custom token roles, remove JSON key role
Some languages will want to define token roles that are
specific to the language.  Add eight custom token roles
to support this case, and replace the "key" role used
by the JSON language with custom role 1.

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -44,6 +44,8 @@
     tabExpand: true
     tabSize: 2
     showLineNumbers: true
+    styles:
+      tokenCustom1: {color: "teal"} # object keys
 
 - name: yaml
   pattern: "**/*.yaml"
