Implement syntax highlighting for Python
Resolves https://github.com/aretext/aretext/issues/22

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -75,3 +75,11 @@
     tabSize: 4
     showLineNumbers: true
 
+- name: python
+  pattern: "**/*.py"
+  config:
+    autoIndent: true
+    syntaxLanguage: python
+    tabExpand: true
+    tabSize: 4
+    showLineNumbers: true
