Add syntax highlighting for Rust
Resolves https://github.com/aretext/aretext/issues/87

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -83,3 +83,12 @@
     tabExpand: true
     tabSize: 4
     showLineNumbers: true
+
+- name: rust
+  pattern: "**/*.rs"
+  config:
+    autoIndent: true
+    syntaxLanguage: rust
+    tabExpand: true
+    tabSize: 4
+    showLineNumbers: true
