Add syntax highlighting for C
Resolves https://github.com/aretext/aretext/issues/81

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -92,3 +92,16 @@
     tabExpand: true
     tabSize: 4
     showLineNumbers: true
+
+- name: c
+  pattern: "**/*.c"
+  config: &cconfig
+    autoIndent: true
+    syntaxLanguage: c
+    tabExpand: true
+    tabSize: 4
+    showLineNumbers: true
+
+- name: c-header
+  pattern: "**/*.h"
+  config: *cconfig
