Implement markdown syntax highlighting
Initial implementation of syntax highlighting for markdown.
This supports most of the CommonMark 0.3 spec
(currently 346 out of 653 of the conformance tests pass).

The known limitations with this implementation are:
    * Incorrect handling of nested emphasis in some cases.
    * No support for inline HTML.
    * No support for autolinks.
    * No support for indented code blocks.
    * No support for block quotes.
    * No support for entity and numeric character references.
    * Some differences in handling of nested lists.
    * Some differences in handling link and code span precedence.
    * No restriction on the number of digits in a list item.
    * No restriction on indentation for lists, code fences, headings, etc.

To enable this, users will need to update their configuration
to specify syntaxLanguage = "markdown" for "**/*.md" files.

Resolves: https://github.com/aretext/aretext/issues/115

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -159,6 +159,16 @@
   pattern: "**/*.h"
   config: *cconfig
 
+- name: markdown
+  pattern: "**/*.md"
+  config:
+    syntaxLanguage: markdown
+    styles:
+      tokenCustom1: {color: "teal", bold: true}        # Heading
+      tokenCustom2: {color: "default", italic: true}   # Emphasis
+      tokenCustom3: {color: "default", bold: true}     # Strong emphasis
+      tokenCustom4: {color: "purple", underline: true} # Link
+
 - name: protobuf
   pattern: "**/*.proto"
   config:
