Add option to display spaces in a document

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -15,6 +15,7 @@
     tabExpand: false
     tabSize: 4
     showTabs: false
+    showSpaces: false
     showLineNumbers: false
     styles:
       lineNum: {color: "olive"}
