--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,8 @@ jobs:
       with:
         go-version: 1.18
 
-    - name: Install goimports
-      run: go install golang.org/x/tools/cmd/goimports@latest
-
-    - name: Install markdownfmt
-      run: go install github.com/shurcooL/markdownfmt@latest
+    - name: Install dev tools
+      run: make install-devtools
 
     - name: Build and run tests
       run: make
