Add LineWrap config option to default configuration

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -17,6 +17,7 @@
     showTabs: false
     showSpaces: false
     showLineNumbers: false
+    lineWrap: "character"
     styles:
       lineNum: {color: "olive"}
       tokenOperator: {color: "purple"}
@@ -164,6 +165,7 @@
   pattern: "**/*.md"
   config:
     syntaxLanguage: markdown
+    lineWrap: "word"
     styles:
       tokenCustom1: {color: "teal", bold: true}        # Heading
       tokenCustom2: {color: "default", italic: true}   # Emphasis
