Add relative line number
Add configuration option "lineNumberMode"
Test the display of line numbers
Set default to "absolute"

Signed-off-by: Julien B <veggiemonk@users.noreply.github.com>

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -17,6 +17,7 @@
     showTabs: false
     showSpaces: false
     showLineNumbers: false
+    lineNumberMode: "absolute"
     lineWrap: "character"
     styles:
       lineNum: {color: "olive"}
