--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -241,6 +241,15 @@
     tabSize: 4
     showLineNumbers: true
 
+- name: sql
+  pattern: "**/*.sql"
+  config:
+    autoIndent: true
+    syntaxLanguage: sql
+    tabExpand: true
+    tabSize: 4
+    showLineNumbers: true
+
 #- name: custom commands for a specific project
 #  pattern: "**/myproject/**"
 #  config:
