Add option to escape non-ASCII unicode
Add a new option to escape non-ASCII unicode with config
option `showUnicode` or menu command "Toggle Show Unicode"

Escaped characters are displayed as unicode codepoints,
grouped in angle brackets by grapheme cluster. By default
the foreground color is set to blue, but the style is
configurable.

--- a/app/default-config.yaml
+++ b/app/default-config.yaml
@@ -16,6 +16,7 @@
     tabSize: 4
     showTabs: false
     showSpaces: false
+    showUnicode: false
     showLineNumbers: false
     lineNumberMode: "absolute"
     lineWrap: "character"
